<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_padding_padrao"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="@dimen/width_92dp"
        android:layout_height="@dimen/width_92dp"
        android:src="@drawable/P1"
        android:id="@+id/imgPessoa"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joao_da_silva"
        android:layout_toRightOf="@+id/imgPessoa"
        android:textSize="@dimen/text_size_nome"
        android:id="@+id/txtNome"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pessoa_fiap_com_br"
        android:id="@+id/txtEmail"
        android:layout_toRightOf="@+id/imgPessoa"
        android:layout_below="@id/txtNome"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        android:layout_alignParentBottom="true"
        android:onClick="voltar"
        />
</RelativeLayout>
