<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/pipa"
        android:scaleType="centerCrop"

        />

    <LinearLayout
        android:layout_width="@dimen/width_Linear_layout"
        android:layout_height="wrap_content"
        android:background="#7FFF"
        android:orientation="vertical"
        android:padding="@dimen/margin_padding_padrao"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginTop"

        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword"

            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar"

            />

    </LinearLayout>
</FrameLayout>
